tests/paczka1/fuzzy1/78089927.err
Error in line 1: q8rKRcZ A597 71,2
Error in line 2: q8rKRcZ A366 26,9
Error in line 9: Erdj A366 3,9
Error in line 11: njn9uvQ A366 5,4
Error in line 15: TaiaQt S433 -3,2
Error in line 13: njn9uvQ A599 82,7
Error in line 10: Erdj A597 28,7
Error in line 8: TaiaQt S433 92,4
Error in line 24: KF92vPonI A366 17,8
Error in line 27: q8rKRcZ A366 26,8
Error in line 32: njn9uvQ S433 2,7
Error in line 31: q8rKRcZ A599 38,3
